# predict-future

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LEARNINGS.md  README.md  docker-compose.yml  drop_db.py  pyproject.toml  query.py  streamlit_app.py
config/: config.py
dags/: kalshi_ingestion_dag.py  llm_dag.py  polymarket_ingestion_dag.py
dags/disabled/: kalshi_ingestion_dag.py
dags/shared/: ingestion_tasks.py  llm_tasks.py
pss_config/: config.py
src/pss/datatypes/: raw_market.py  validated_market.py
src/pss/ingestion/: kalshi.py  polymarket.py
src/pss/ingestion/shared/: base.py  filter_markets.py  market_processing.py
src/pss/llm/: classifier.py  client.py  gemini_client.py  holdings.py  prompts.py
src/pss/storage/postgres/: client.py  db_init.py  queries.py
src/pss/storage/s3/: client.py
src/pss/storage/shared/: client.py
src/pss/validation/: models.py
