[build-system]
requires=["setuptools>=71"]
build-backend="setuptools.backends.legacy:build"

[project]
name="pss"
version="0.1.0"
requires-python=">=3.10"

dependencies=[
    "apache-airflow==2.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9",
    "boto3>=1.34",
    "anthropic>=0.25",
]

[tool.setuptools.packages.find]
where = ["src", "dags", "pss_config", "tests"]