[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pss"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "apache-airflow==2.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9",
    "boto3>=1.34",
    "anthropic>=0.25",
    "google-generativeai>=0.8",
]

[tool.setuptools.packages.find]
where = ["."]